--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">NumberIncrementer</string>
-    <string name="number_text_view">Number is: </string>
+    <string name="number_text_view">Number is: 0</string>
     <string name="increment_button">ADD ONE</string>
     <string name="reset_button">Reset</string>
 </resources>
